# tpu-research

./: .gitignore  .gitmodules  README.md  check_jax.py  plan.md  pyproject.toml
.gemini/: GEMINI.md
.gemini/commands/: plan.toml
delta_attention_comparison/: PALLAS_REWRITE_PLAN.md  README.md  benchmark_script.py  pyproject.toml  run.sh  setup_tpu.sh
delta_attention_comparison/analysis/: compare_memory.py  roofline_model.py
delta_attention_comparison/src/: common_types.py  initializers.py  linears.py  normalizations.py
delta_attention_comparison/src/layers/: kimi_delta_attention.py  pallas_kda.py  qwen3.py
delta_attention_comparison/tests/: test_kda_cross_framework.py  test_kda_equivalence.py  test_pallas_kda.py  test_tpu_cpu_consistency.py
matmul-shape/: README.md  bench.py  test_case_normal.csv  test_case_normal_results.csv  test_case_padding.csv  test_case_padding_results.csv
scripts/: gpu_resource.sky.yaml  gpu_resource_rendered.sky.yaml  launch_gpu.sh  launch_tpu.sh  sync_code.sh  tpu_resource.sky.yaml  tpu_resource_rendered.sky.yaml
