[project]
name = "tpu-research"
version = "0.1.0"
authors = [
  { name = "xinglong", email = "xinglong940713@gmail.com" },
]
description = "A collection of tpu experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "numpy",
    "matplotlib>=3.10.8",
    "jax[tpu]; sys_platform == 'linux'",
    "libtpu; sys_platform == 'linux'",
    "torch>=2.9.1",
    "transformers",
    "einops",
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]
