[project]
name = "delta_attention_comparison"
version = "0.1.0"
description = "Benchmark comparing KimiDeltaAttention and Qwen3NextGatedDeltaNet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "numpy",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
tpu = [
    "jax[tpu]; sys_platform == 'linux'",
    "libtpu; sys_platform == 'linux'",
]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/libtpu_releases.html"]
